BAU: debugging SOAP error on WASP endpoint